--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@openzeppelin/contracts": "^4.4.2",
     "framer-motion": "^5.6.0",
     "next": "^12.0.9",
     "react": "^17.0.2",
